# cve-2023-31346-poc

./: README.md  rust-toolchain.toml
common/: Cargo.toml
common/constants/src/: lib.rs
common/loader/: Cargo.toml
common/loader/src/: elf.rs  lib.rs
common/snp-types/src/: guest_message.rs  lib.rs  secrets.rs
host/: Cargo.toml  Makefile.toml
host/mushroom/: Cargo.toml
host/mushroom/src/: kvm.rs  lib.rs  main.rs  slot.rs
tee/: Cargo.toml  Makefile.toml
tee/kernel/: Cargo.toml
tee/kernel/src/: ghcb.rs  main.rs  pagetable.rs  reset_vector.rs
