[workspace]
members = ["mushroom"]
resolver = "2"

[workspace.dependencies]
mushroom = { path = "mushroom" }
constants = { path = "../common/constants" }
loader = { path = "../common/loader" }
snp-types = { path = "../common/snp-types" }

[patch.crates-io]
bytemuck = { git = "https://github.com/Freax13/bytemuck.git", rev = "e63ffe8d10129a70a28fcad2bf656782bec8d4bb" }
