cargo-features = ["profile-rustflags"]

[workspace]
members = ["kernel", "serial-log"]
resolver = "2"

[workspace.dependencies]
constants = { path = "../common/constants" }
kernel-macros = { path = "kernel-macros" }
serial-log = { path = "serial-log" }
snp-types = { path = "../common/snp-types" }

[profile.kernel]
inherits = "release"
opt-level = "z"
lto = "thin"
debug-assertions = true
overflow-checks = true

[patch.crates-io]
bytemuck = { git = "https://github.com/Freax13/bytemuck.git", rev = "e63ffe8d10129a70a28fcad2bf656782bec8d4bb" }
