[package]
name = "mushroom"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
bit_field = "0.10.1"
bitflags = "1.3.2"
bytemuck = { version = "1.13.0", features = ["derive", "min_const_generics", "extern_crate_std"] }
clap = { version = "4.1.11", features = ["derive", "env"]}
constants = { workspace = true }
libc = "0.2.146"
loader = { workspace = true }
nix = "0.26.1"
snp-types = { workspace = true }
tokio = { version = "1.26.0", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
volatile = { version = "0.5.1", features = ["unstable"] }
x86_64 = { git = "https://github.com/rust-osdev/x86_64", rev = "bae6119533f19cd5c3557d5a302524f1d72456c5" }
