cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-unknown-none"

[dependencies]
aes-gcm = { version = "0.10.1", features = ["aes", "heapless"], default-features = false }
bit_field = "0.10.1"
bytemuck = { version = "1.13.0", features = ["min_const_generics"] }
constants = { workspace = true }
log = { version = "0.4.17", default-features = false }
snp-types = { workspace = true }
volatile = { version = "0.5.1", features = ["unstable"] }
x86_64 = { git = "https://github.com/rust-osdev/x86_64", rev = "bae6119533f19cd5c3557d5a302524f1d72456c5" }
